--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^8.3.5"
   },
   "eslintConfig": {
     "root": true,
