--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,6 +8,8 @@ pull_request_rules:
               - "title~=Bump @vue/compiler-sfc from"
               - "title~=Bump vue from"
               - "title~=Bump postcss from"
+              - "title~=Bump eslint-plugin-vue from"
+              - "title~=Bump axios from"
     actions:
       merge:
         method: rebase
