--- a/.mergify.yml
+++ b/.mergify.yml
@@ -7,8 +7,11 @@ pull_request_rules:
               - "title~=Bump core-js from"
               - "title~=Bump @vue/compiler-sfc from"
               - "title~=Bump vue from"
+              - "title~=Bump vue-router from"
               - "title~=Bump postcss from"
               - "title~=Bump eslint-plugin-vue from"
+              - "title~=Bump cli-plugin-eslint from"
+              - "title~=Bump cli-plugin-babel from"
               - "title~=Bump axios from"
     actions:
       merge:
