--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@vue/cli-plugin-babel": "~5.0.1",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-service": "^4.5.15",
-    "@vue/compiler-sfc": "^3.2.31",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "postcss": "^8.4.8"
+    "@vue/cli-plugin-eslint": "~5.0.1",
+    "@vue/cli-service": "~5.0.1",
+    "eslint": "^8.10.0",
+    "eslint-plugin-vue": "^8.5.0"
   },
   "eslintConfig": {
     "root": true,
@@ -34,13 +33,14 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not dead",
+    "not ie 11"
   ]
 }
